# agentic_data_transformation_pipeline

./: .dockerignore  .env.example  .gitignore  Dicionário de Dados - Teste Técnico de Data & AI Engineering.md  Dockerfile  PRD.md  README.md  Teste Técnico de Data & AI Engineering.md  compose.yaml  pyproject.toml
.claude/: napkin.md  settings.json
.claude/agents/: reviewer-pipeline.md
.claude/skills/: README.md
.claude/skills/agentic-loop/: SKILL.md
.claude/skills/llm-client-anthropic-compat/: SKILL.md
.claude/skills/medallion-data-layout/: SKILL.md
.claude/skills/polars-lazy-pipeline/: SKILL.md
.claude/skills/python-best-practices/: SKILL.md
.github/workflows/: ci.yml
.specs/features/F1/: DESIGN.md  tasks.md
.specs/features/F2/: design.md  spec.md  tasks.md
.specs/features/F3/: design.md  spec.md  tasks.md
.specs/features/F4/: SMOKE.md  design.md  perf_tasks.md  spec.md  tasks.md
.specs/features/F5/: DESIGN.md  tasks.md
.specs/features/F7/: tasks.md
.specs/features/FIC/: matrix.md  spec.md  tasks.md
.specs/project/: GAPS.md  PROJECT.md  ROADMAP.md  STATE.md
docs/: agent-flow.md  call-demo-script.md  f2-llm-handoff.md  gold-flow.md  learn-advanced-concepts.md  learn-agent-flow-by-example.md  learn-agent-flow.md  learn-design-decisions.md  silver-flow.md  spec-code-map.md
docs/api/: README.md  agent.md  errors.md  gold.md  llm.md  manifest.md  silver.md
docs/runbooks/: debug-quick-triage.md  escalation_spike.md  f5-sentiment-backfill.md  layer_latency.md  lock_held.md  loop_stalled.md  manifest_unreachable.md
docs/usage/: cli.md  configuration.md  fault-demo.md  quickstart.md  troubleshooting.md
scripts/: bench_agent.py  inject_fault.py
src/pipeline/: __init__.py  __main__.py  errors.py  logging.py  paths.py  settings.py
src/pipeline/agent/: __init__.py  _logging.py  diagnoser.py  escalator.py  executor.py  lock.py  loop.py  observer.py  planner.py  runners.py  types.py
src/pipeline/cli/: __init__.py  agent.py  gold.py  ingest.py  silver.py
src/pipeline/config/: __init__.py  settings.py
src/pipeline/gold/: __init__.py  _regex.py  agent_performance.py  competitor_intel.py  concurrency.py  conversation_scores.py  insights.py  intent_score.py  lead_profile.py  persona.py  sentiment.py  transform.py  writer.py
tests/: conftest.py
tests/integration/: test_agent_budget_exhausted.py  test_agent_run_forever.py  test_agent_run_once.py  test_cli_agent.py  test_cli_gold_e2e.py  test_cli_ingest_e2e.py  test_cli_silver_e2e.py  test_ingest_e2e.py  test_inject_fault.py  test_perf_noop_sla.py
tests/property/: test_agent_state_props.py
tests/unit/: test_agent_diagnoser.py  test_agent_escalator.py  test_agent_executor.py  test_agent_lock.py  test_agent_logging.py  test_agent_observer.py  test_agent_planner.py  test_agent_runners.py  test_agent_state.py  test_agent_types.py  test_config_settings.py  test_errors.py  test_fix_out_of_range.py  test_fix_partition_missing.py  test_fix_regex_break.py  test_fix_schema_drift.py  test_gold_agent_performance.py  test_gold_competitor_intel.py  test_gold_concurrency.py  test_gold_conversation_scores.py  test_gold_insights.py  test_gold_intent_score.py  test_gold_lead_profile.py  test_gold_persona_llm.py  test_gold_persona_rules.py  test_gold_regex.py  test_gold_sentiment.py  test_gold_transform.py  test_gold_writer.py  test_ingest_batch.py  test_ingest_reader.py  test_ingest_transform.py  test_ingest_writer.py  test_llm_cache.py  test_llm_client.py  test_llm_client_stub.py  test_logging.py  test_main.py  test_manifest.py  test_manifest_runs.py  (+22 more)
(+84 files in other folders)
