[project]
name = "agentic-data-pipeline"
version = "0.1.0"
description = "Self-healing Bronze/Silver/Gold data pipeline with an LLM-driven agent loop."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Lucas Bastos", email = "lucsbasto@gmail.com" }]

dependencies = [
    "polars>=1.0",
    "pyarrow>=16.0",
    "anthropic>=0.34",
    "pydantic>=2.7",
    "pydantic-settings>=2.6",
    "structlog>=24.1",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "freezegun>=1.5",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
pipeline = "pipeline.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]

# -----------------------------------------------------------------------------
# Dev dependency group (modern PEP 735 form; uv honors this natively)
# -----------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "freezegun>=1.5",
    "ruff>=0.5",
    "mypy>=1.10",
]

# -----------------------------------------------------------------------------
# Ruff (lint + format)
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # flake8-bugbear
    "C4",            # flake8-comprehensions
    "SIM",           # flake8-simplify
    "RUF",           # ruff-specific
    "ANN",           # flake8-annotations
    "PTH",           # pathlib over os.path
    "PL",            # pylint subset
    "TRY",           # tryceratops
]
ignore = [
    "ANN401",        # allow Any in narrow cases
    "PLR0913",       # too-many-arguments — settings constructors trip this
    "TRY003",        # long exception messages — we want them
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",      # allow missing annotations in tests
    "PLR2004",  # magic numbers are fine in tests
    "TRY",      # tryceratops rules are inflexible for test scaffolding
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -----------------------------------------------------------------------------
# Mypy (strict)
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=pipeline",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "integration: end-to-end tests that touch the filesystem",
]
